// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timebox should be green when its value is available 1`] = `
.c0 {
  background: #18DC86;
}

<div
  class="c0"
  id="timebox-id"
  value="available"
/>
`;

exports[`Timebox should be red when its value is busy 1`] = `
.c0 {
  background: #E95F63;
}

<div
  class="c0"
  id="timebox-id"
  value="busy"
/>
`;

exports[`Timebox should be transparent when its value is notdefined 1`] = `
.c0 {
  background: transparent;
}

<div
  class="c0"
  id="timebox-id"
  value="notdefined"
/>
`;
